hotfix: restore some lost MRT styling and fix alignment issues

--- a/style.css
+++ b/style.css
@@ -385,6 +385,12 @@ select {
   color: #454545
 }
 
+.leg-middle {
+    display: grid;
+    grid-template-columns: 50px 1fr;
+    grid-gap: 5px;
+}
+
 .leg-summary {
   display: flex;
   justify-content: space-between;
@@ -392,7 +398,7 @@ select {
   text-align: center;
 }
 
-.leg-summary img {
+.leg-middle img {
   width: 40px;
   height: 40px;
   margin:5px;
